# 32f412zg-mbed

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  custom_targets.json  main.cpp  output.txt
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
.github/workflows/: pr_builds.yaml
TARGET_DISCO_F412ZG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_F412G_DISCO/: CMakeLists.txt  PeripheralPins.c  PinNames.h
button_handler/: CmakeLists.txt
button_handler/include/: button.h  button_event.h  button_handler.h
button_handler/src/: button.h  button_event.c  button_events.h  button_handler.cpp
resources/: CODE_STATS.md
